--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "jest": "^29.7.0",
+    "jest": "^29.7.0"
+  },
+  "devDependencies": {
     "supertest": "^6.3.3"
   }
 }
