--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -23,3 +23,4 @@ jobs:
 
       - name: Run tests
         run: npm test
+        working-directory: C:\Users\JohnF\Documents\MIT\Modules\Module_30\"Set Up A CICD Pipeline"
