--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "jest": "^29.7.0"
   },
   "devDependencies": {
